--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
             android:name=".CreateActivity"
             android:label="@string/app_name" >
         </activity>
+        <activity
+            android:name=".SavedActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
