--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -28,8 +28,7 @@
         </activity>
         <activity
             android:name=".CreateActivity"
-            android:label="@string/app_name"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+            android:label="@string/app_name">
         </activity>
         <activity
             android:name=".SavedActivity"
